@@ -1,3 +1,4 @@
 usr/include/skia/*
+usr/include/skia/*/*
 
 
